# THERMUS

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  buil_n_test.sh  build_install_n_test.sh  cmake_n_install_thermus.sh  cmakeroot.sh  cmakethermus.sh  roadmap.md  roadmap.txt  rootlogon.C  rootlogon_dist.C
.github/workflows/: cmake-macos-13-no-doc.yml  cmake-macos-14-no-doc.yml  cmake-macos-15-no-doc.yml  cmake-macos-no-doc.yml  cmake-macos.yml  cmake-ubuntu-22.04-no-doc.yml  cmake-ubuntu-24.04-no-doc.yml  cmake-ubuntu-no-doc.yml  cmake-ubuntu.yml  linter.yml
doc/: CMakeLists.txt  thermus_biblio_v4.bib  thermus_reference_v4.bbl  thermus_reference_v4.tex
doc/figures/: fig1_EnergyDepPiDecay_Thermus_v4.eps  fig2_Thermus_Structure_v4.eps  fig3_ResonanceMassDistribution_comp_Thermus_v4.eps
functions/: BQConstrainBDens.cxx  BQConstrainEN.cxx  BQConstrainQ.cxx  BQConstrainQBDens.cxx  BQConstrainQEN.cxx  BQConstrainQNetBDens.cxx  BQConstrainQPercolation.cxx  BQConstrainQST3.cxx  BQConstrainST3.cxx  BQfuncBDens.cxx  BQfuncEN.cxx  BQfuncQ.cxx  BQfuncQBDens.cxx  BQfuncQEN.cxx  BQfuncQNetBDens.cxx  BQfuncQPercolation.cxx  BQfuncQST3.cxx  BQfuncST3.cxx  BSQCanonicalFncs.cxx  BSQConstrainBSQ.cxx  BSQConstrainQ.cxx  BSQConstrainQQ.cxx  BSQConstrainS.cxx  BSQConstrainSBDens.cxx  BSQConstrainSEN.cxx  BSQConstrainSPercolation.cxx  BSQConstrainSQ.cxx  BSQConstrainSQBDens.cxx  BSQConstrainSQC.cxx  BSQConstrainSQCb.cxx  BSQConstrainSQEN.cxx  BSQConstrainSQNetBDens.cxx  BSQConstrainSQPercolation.cxx  BSQConstrainSQST3.cxx  BSQConstrainSST3.cxx  BSQfuncBSQ.cxx  BSQfuncQ.cxx  BSQfuncQQ.cxx  BSQfuncS.cxx  BSQfuncSBDens.cxx  (+23 more)
include/: FncsConstrain.h  FncsThermalModel.h
main/: CMakeLists.txt  LinkDef.h  THERMUSClassesLinkDef.h  TTMDecay.cxx  TTMDecay.h  TTMDecayChannel.cxx  TTMDecayChannel.h  TTMDensObj.cxx  TTMDensObj.h  TTMIDObj.cxx  TTMIDObj.h  TTMParameter.cxx  TTMParameter.h  TTMParameterSet.cxx  TTMParameterSet.h  TTMParameterSetBQ.cxx  TTMParameterSetBQ.h  TTMParameterSetBSQ.cxx  TTMParameterSetBSQ.h  TTMParameterSetCanBSQ.cxx  TTMParameterSetCanBSQ.h  TTMParameterSetSQ.cxx  TTMParameterSetSQ.h  TTMParticle.cxx  TTMParticle.h  TTMParticleSet.cxx  TTMParticleSet.h  TTMYield.cxx  TTMYield.h  TThermalFit.cxx  TThermalFit.h  TThermalFitBQ.cxx  TThermalFitBQ.h  TThermalFitBSQ.cxx  TThermalFitBSQ.h  TThermalFitCanBSQ.cxx  TThermalFitCanBSQ.h  TThermalFitSQ.cxx  TThermalFitSQ.h  TThermalModel.cxx  (+20 more)
particles/: B+_decay.txt  B0_decay.txt  B_+_decay.txt  B_0_decay.txt  Bc+_decay.txt  Bs_0_decay.txt  CMakeLists.txt  D+_decay.txt  D0_(2400)+_decay.txt  D0_decay.txt  D1(2420)+_decay.txt  D1(2430)0_decay.txt  D2_(2460)+_decay.txt  D2_(2460)0_decay.txt  D_(2007)0_decay.txt  D_(2010)+_decay.txt  Delta(1232)++_decay.txt  Delta(1232)+_decay.txt  Delta(1232)-_decay.txt  Delta(1232)0_decay.txt  Delta(1600)++_decay.txt  Delta(1600)+_decay.txt  Delta(1600)-_decay.txt  Delta(1600)0_decay.txt  Delta(1620)++_decay.txt  Delta(1620)+_decay.txt  Delta(1620)-_decay.txt  Delta(1620)0_decay.txt  Delta(1700)++_decay.txt  Delta(1700)+_decay.txt  Delta(1700)-_decay.txt  Delta(1700)0_decay.txt  Delta(1905)++_decay.txt  Delta(1905)+_decay.txt  Delta(1905)-_decay.txt  Delta(1905)0_decay.txt  Delta(1910)++_decay.txt  Delta(1910)+_decay.txt  Delta(1910)-_decay.txt  Delta(1910)0_decay.txt  (+221 more)
scripts/: CMakeLists.txt  inplace_build.sh  ncore.sh  run_thermus.in  thermus_build_install.sh  use_thermus.C
test/: CMakeLists.txt  all_predictions.C  dev_test.sh  dev_test_from_scratch.sh  inplace_test.sh  lhc5020_final_0_single_charm.txt  lhc5020_fit_charm.C  prediction.C  prediction_dist.C  prediction_expected.txt  prediction_expected_model_1.txt
test/expected_results/: CMakeLists.txt  result_1.txt
tests/: CMakeLists.txt  all_predictions.C  checkout_dev_test.sh  dev_test.sh  inplace_test.sh  lhc5020_fit_charm.C  prediction.txt  prediction_expected.txt  test_on_installed.sh
tests/expected_results/: CMakeLists.txt  current_fit_lhc5020_fit_test_arm.txt  current_fit_lhc5020_fit_test_x86_64.txt  result_0.txt
