# CMakeLists.txt in main

FILE(GLOB SRCFILES *.cxx)
FILE(GLOB HFILES TT*.h)


#ROOT_STANDARD_LIBRARY_PACKAGE(THERMUS HEADERS ${HFILES} SOURCES  ${SRCFILES} LIBRARIES ${ROOT_LIBRARIES} GSL::gsl GSL::gslcblas LINKDEF THERMUSClassesLinkDef.h)

#ROOT_GENERATE_DICTIONARY(ThermusDict ${HFILES} MODULE THERMUS LINKDEF THERMUSClassesLinkDef.h)

SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

add_library(THERMUS SHARED ${SRCFILES})
set_target_properties(THERMUS PROPERTIES PUBLIC_HEADER "${HFILES}")
target_link_libraries(THERMUS ${ROOT_LIBRARIES} GSL::gsl GSL::gslcblas)

target_include_directories(THERMUS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
ROOT_GENERATE_DICTIONARY(ThermusDict ${HFILES} LINKDEF THERMUSClassesLinkDef.h MODULE THERMUS)

install(TARGETS THERMUS)
#install(TARGETS ThermusDict)
#install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libTHERMUS_rdict.pcm DESTINATION ${CMAKE_INSTALL_LIBDIR})
#install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libTHERMUS.rootmap DESTINATION ${CMAKE_INSTALL_LIBDIR})
