# CMakeLists.txt in main

FILE(GLOB SRCFILES *.cxx)
FILE(GLOB HFILES TT*.h)

# That line is needed for obscure ROOT reasons (but shouldn't)
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

add_library(THERMUS SHARED ${SRCFILES})
set_target_properties(THERMUS PROPERTIES PUBLIC_HEADER "${HFILES}")
target_link_libraries(THERMUS ${ROOT_LIBRARIES} GSL::gsl GSL::gslcblas)

target_include_directories(THERMUS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
ROOT_GENERATE_DICTIONARY(ThermusDict ${HFILES} LINKDEF THERMUSClassesLinkDef.h MODULE THERMUS)

install(TARGETS THERMUS PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME})
